2010-05-20  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: fixed the permissions to DEBIAN temp package. 
	
2010-05-18  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: added parameter to make only packages of
	pear modules or not.

2010-05-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: fixed the fgraph when cron get a report in PDF for to
	send, and this situation the fgraph execute in localhost althought it'snt
	login.

2010-05-18  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Update build/version to rc1.

	* extras/pandoradb_migrate_v3.0_to_v3.1.sql: Revised upgrade script.
	Tested with several 3.0 versions.

	* pandora_console_upgrade: Updated script, tested to work with 3.1

2010-05-18  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php
	godmode/reporting/visual_console_builder.wizard.php
	godmode/reporting/visual_console_builder.php: Fixed the
	multiple agents selection on visual console wizard 
	for bug 2997750

2010-05-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: added function 
	"agent_changed_by_multiple_agents_id" for response to change agent in
	wizard in visual console editor.

	* operation/agentes/ver_agente.php: added response to
	"get_agent_modules_json_for_multiple_agents_id" for the ajax previous
	function.
	
	* godmode/reporting/visual_console_builder.wizard.php: used new javascript
	function.

2010-05-17  Sergio Martin <sergio.martin@artica.es>

	* include/languages/cs.po
	include/languages/nl.mo
	include/languages/pt_BR.po
	include/languages/es.po
	include/languages/pl.mo
	include/languages/ko.po
	include/languages/it.mo
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/ro.po
	include/languages/pt.mo
	include/languages/ast.mo
	include/languages/index.pot
	include/languages/bn.po
	include/languages/ar.po
	include/languages/cs.mo
	include/languages/pt_BR.mo